[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/character_creation/Step1_BasicInfo.gd" id="1"]

[sub_resource type="ButtonGroup" id="ButtonGroup_1"]
resource_name = "PositionGroup"

[node name="Step1_BasicInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Spacer" type="Control" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="NameSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/NameSection"]
layout_mode = 2
text = "ì„ ìˆ˜ ì´ë¦„"
theme_override_font_sizes/font_size = 24

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/NameSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameInput" type="LineEdit" parent="ScrollContainer/VBoxContainer/NameSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
placeholder_text = "ì´ë¦„ì„ ì…ë ¥í•˜ì„¸ìš”..."
theme_override_font_sizes/font_size = 20
max_length = 20

[node name="RandomNameButton" type="Button" parent="ScrollContainer/VBoxContainer/NameSection/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 60)
text = "ğŸ²"
theme_override_font_sizes/font_size = 24
tooltip_text = "ëœë¤ ì´ë¦„ ìƒì„±"

[node name="PositionSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/PositionSection"]
layout_mode = 2
text = "í¬ì§€ì…˜ ì„ íƒ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/PositionSection"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="ForwardButton" type="Button" parent="ScrollContainer/VBoxContainer/PositionSection/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(900, 200)
text = "âš½ ê³µê²©ìˆ˜\nê³¨ì„ ë„£ëŠ” ê²ƒì´ ì£¼ ì„ë¬´"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_1")

[node name="MidfielderButton" type="Button" parent="ScrollContainer/VBoxContainer/PositionSection/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(900, 200)
text = "ğŸ¯ ë¯¸ë“œí•„ë”\nê³µê²©ê³¼ ìˆ˜ë¹„ë¥¼ ì—°ê²°í•˜ëŠ” í•µì‹¬"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
toggle_mode = true
button_group = SubResource("ButtonGroup_1")

[node name="DefenderButton" type="Button" parent="ScrollContainer/VBoxContainer/PositionSection/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(900, 200)
text = "ğŸ›¡ï¸ ìˆ˜ë¹„ìˆ˜\nìƒëŒ€ ê³µê²©ì„ ë§‰ëŠ” ê²ƒì´ ì£¼ ì„ë¬´"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
toggle_mode = true
button_group = SubResource("ButtonGroup_1")

[node name="NumberSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/NumberSection"]
layout_mode = 2
text = "ë“±ë²ˆí˜¸"
theme_override_font_sizes/font_size = 24

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/NumberSection"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="DecreaseButton" type="Button" parent="ScrollContainer/VBoxContainer/NumberSection/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
text = "-"
theme_override_font_sizes/font_size = 32

[node name="NumberDisplay" type="Label" parent="ScrollContainer/VBoxContainer/NumberSection/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 80)
text = "7"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncreaseButton" type="Button" parent="ScrollContainer/VBoxContainer/NumberSection/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 80)
text = "+"
theme_override_font_sizes/font_size = 32

[node name="Spacer2" type="Control" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)