extends Control

signal data_updated(data: Dictionary)
signal validation_failed(error: String)

const MIN_NAME_LENGTH = 2
const MAX_NAME_LENGTH = 20
const MIN_NUMBER = 1
const MAX_NUMBER = 99

var character_data: Dictionary = {}
var selected_position: String = "CM"
var current_number: int = 7
var _error_label: Label = null

@onready var name_input: LineEdit = $ScrollContainer/VBoxContainer/NameSection/HBoxContainer/NameInput
@onready var random_name_button: Button = $ScrollContainer/VBoxContainer/NameSection/HBoxContainer/RandomNameButton
@onready var number_display: Label = $ScrollContainer/VBoxContainer/NumberSection/HBoxContainer/NumberDisplay
@onready var decrease_button: Button = $ScrollContainer/VBoxContainer/NumberSection/HBoxContainer/DecreaseButton
@onready var increase_button: Button = $ScrollContainer/VBoxContainer/NumberSection/HBoxContainer/IncreaseButton

# Position system - 7 specific positions
var position_buttons: Dictionary = {}
var position_info: Dictionary = {
	"ST": {"title": "âš½ ST (ìŠ¤íŠ¸ë¼ì´ì»¤)", "description": "ìµœì „ë°©ì—ì„œ ê³¨ì„ ë„£ëŠ” ê³µê²©ìˆ˜", "features": ["ë§ˆë¬´ë¦¬", "ìœ„ì¹˜ì„ ì •", "í—¤ë”©", "ìŠ¤í”¼ë“œ"]},
	"LM": {"title": "ğŸƒ LM (ì™¼ìª½ ë¯¸ë“œí•„ë”)", "description": "ì™¼ìª½ ì¸¡ë©´ì—ì„œ ê³µìˆ˜ë¥¼ ë‹´ë‹¹", "features": ["í¬ë¡œìŠ¤", "ë“œë¦¬ë¸”", "ìŠ¤í”¼ë“œ", "í™œë™ëŸ‰"]},
	"CM": {"title": "ğŸ¯ CM (ì¤‘ì•™ ë¯¸ë“œí•„ë”)", "description": "ì¤‘ì•™ì—ì„œ ê²½ê¸°ë¥¼ ì¡°ìœ¨í•˜ëŠ” í•µì‹¬", "features": ["íŒ¨ìŠ¤", "ì‹œì•¼", "ì²´ë ¥", "ë³¼ë°°ê¸‰"]},
	"RM": {"title": "ğŸƒ RM (ì˜¤ë¥¸ìª½ ë¯¸ë“œí•„ë”)", "description": "ì˜¤ë¥¸ìª½ ì¸¡ë©´ì—ì„œ ê³µìˆ˜ë¥¼ ë‹´ë‹¹", "features": ["í¬ë¡œìŠ¤", "ë“œë¦¬ë¸”", "ìŠ¤í”¼ë“œ", "í™œë™ëŸ‰"]},
	"LB": {"title": "ğŸ›¡ï¸ LB (ì™¼ìª½ í’€ë°±)", "description": "ì™¼ìª½ ì¸¡ë©´ ìˆ˜ë¹„ìˆ˜", "features": ["íƒœí´", "ìŠ¤í”¼ë“œ", "í¬ë¡œìŠ¤", "ì²´ë ¥"]},
	"CB": {"title": "ğŸ›¡ï¸ CB (ì„¼í„°ë°±)", "description": "ì¤‘ì•™ì—ì„œ ê³¨ëŒ€ë¥¼ ì§€í‚¤ëŠ” ìˆ˜ë¹„ìˆ˜", "features": ["íƒœí´", "í—¤ë”©", "ìœ„ì¹˜ì„ ì •", "ë¦¬ë”ì‹­"]},
	"RB": {"title": "ğŸ›¡ï¸ RB (ì˜¤ë¥¸ìª½ í’€ë°±)", "description": "ì˜¤ë¥¸ìª½ ì¸¡ë©´ ìˆ˜ë¹„ìˆ˜", "features": ["íƒœí´", "ìŠ¤í”¼ë“œ", "í¬ë¡œìŠ¤", "ì²´ë ¥"]}
}


func _ready() -> void:
	print("[Step1_BasicInfo] Ready")
	_setup_controls()
	_connect_signals()
	_create_error_label()


func _setup_controls() -> void:
	# 7ê°œ í¬ì§€ì…˜ ë²„íŠ¼ ë™ì  ìƒì„±
	_create_position_buttons()

	# í¬ì§€ì…˜ ì •ë³´ í‘œì‹œë¥¼ ìœ„í•œ ì»¨í…Œì´ë„ˆ ìƒì„±
	_create_position_info_display()

	# Set initial values from character_data if available
	if character_data.has("basic_info"):
		if character_data.basic_info.has("name"):
			name_input.text = character_data.basic_info.name
		if character_data.basic_info.has("number"):
			current_number = character_data.basic_info.number
			number_display.text = str(current_number)
		if character_data.basic_info.has("position"):
			selected_position = character_data.basic_info.position

	# í¬ì§€ì…˜ ì„ íƒ ìƒíƒœ ì—…ë°ì´íŠ¸ ë° ì •ë³´ í‘œì‹œ
	_update_position_selection()
	_update_position_info_display()


func _create_position_buttons() -> void:
	# ê¸°ì¡´ PositionSection ì°¾ê¸° ë˜ëŠ” ìƒì„±
	var scroll_vbox = $ScrollContainer/VBoxContainer
	var position_section = scroll_vbox.get_node_or_null("PositionSection")

	if position_section:
		# ê¸°ì¡´ ë²„íŠ¼ë“¤ ì œê±°
		for child in position_section.get_children():
			child.queue_free()
	else:
		# PositionSection ìƒì„±
		position_section = VBoxContainer.new()
		position_section.name = "PositionSection"
		scroll_vbox.add_child(position_section)
		scroll_vbox.move_child(position_section, 2)  # NumberSection ë‹¤ìŒì— ë°°ì¹˜

	# íƒ€ì´í‹€ ë¼ë²¨
	var title_label = Label.new()
	title_label.text = "í¬ì§€ì…˜ ì„ íƒ"
	title_label.add_theme_font_size_override("font_size", 24)
	title_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	position_section.add_child(title_label)

	# í¬ì§€ì…˜ ë²„íŠ¼ ì»¨í…Œì´ë„ˆ (2í–‰ìœ¼ë¡œ ë°°ì¹˜)
	var grid = GridContainer.new()
	grid.columns = 4
	grid.add_theme_constant_override("h_separation", 10)
	grid.add_theme_constant_override("v_separation", 10)
	position_section.add_child(grid)

	# í¬ì§€ì…˜ ìˆœì„œ: ST, LM, CM, RM, LB, CB, RB (+ ë¹ˆì¹¸)
	var positions_order = ["", "ST", "", "", "LM", "CM", "RM", "", "LB", "CB", "RB", ""]

	for pos in positions_order:
		if pos == "":
			# ë¹ˆ ê³µê°„
			var spacer = Control.new()
			spacer.custom_minimum_size = Vector2(80, 50)
			grid.add_child(spacer)
		else:
			var btn = Button.new()
			btn.text = pos
			btn.custom_minimum_size = Vector2(80, 50)
			btn.toggle_mode = true
			btn.pressed.connect(_on_position_button_pressed.bind(pos))
			grid.add_child(btn)
			position_buttons[pos] = btn


func _connect_signals() -> void:
	# Name input
	name_input.text_changed.connect(_on_name_changed)
	random_name_button.pressed.connect(_on_random_name_pressed)

	# Number controls
	decrease_button.pressed.connect(_on_decrease_number)
	increase_button.pressed.connect(_on_increase_number)
	# Position buttons are connected in _create_position_buttons()


func set_character_data(data: Dictionary) -> void:
	character_data = data
	if is_node_ready():
		_setup_controls()


func update_display(data: Dictionary) -> void:
	character_data = data
	_setup_controls()


func _on_name_changed(new_text: String) -> void:
	_emit_data_update()


func _on_random_name_pressed() -> void:
	var first_names = ["ê¹€", "ì´", "ë°•", "ìµœ", "ì •", "ê°•", "ì¡°", "ìœ¤", "ì¥", "ì„"]
	var last_names = ["ë¯¼ìˆ˜", "ì¤€í˜¸", "ì„±ë¯¼", "ì§€í›ˆ", "í˜„ìš°", "ì¤€ì˜", "ë™í˜„", "ì¬í˜„", "ìš°ì§„", "ì„œì¤€"]
	var random_name = first_names.pick_random() + last_names.pick_random()
	name_input.text = random_name
	_emit_data_update()


func _on_position_button_pressed(pos: String) -> void:
	# í¬ì§€ì…˜ ì„¤ì •
	selected_position = pos

	_update_position_selection()
	_update_position_info_display()
	_emit_data_update()


func _on_decrease_number() -> void:
	if current_number > 1:
		current_number -= 1
		number_display.text = str(current_number)
		_emit_data_update()


func _on_increase_number() -> void:
	if current_number < 99:
		current_number += 1
		number_display.text = str(current_number)
		_emit_data_update()


func _update_position_selection() -> void:
	# Update button pressed states based on selected position
	for pos in position_buttons:
		var btn = position_buttons[pos]
		btn.button_pressed = (pos == selected_position)


func _create_position_info_display() -> void:
	# í¬ì§€ì…˜ ì •ë³´ í‘œì‹œ ì»¨í…Œì´ë„ˆ ìƒì„±
	var info_container = VBoxContainer.new()
	info_container.name = "PositionInfoSection"
	info_container.add_theme_constant_override("separation", 10)

	# êµ¬ë¶„ì„  ì¶”ê°€
	var separator = HSeparator.new()
	separator.add_theme_constant_override("separation", 20)
	info_container.add_child(separator)

	var title_label = Label.new()
	title_label.name = "TitleLabel"
	title_label.text = "âš½ ê³µê²©ìˆ˜"
	title_label.add_theme_font_size_override("font_size", 28)
	title_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER

	var desc_label = Label.new()
	desc_label.name = "DescriptionLabel"
	desc_label.text = "ê³¨ì„ ë„£ëŠ” ê²ƒì´ ì£¼ ì„ë¬´ì…ë‹ˆë‹¤"
	desc_label.add_theme_font_size_override("font_size", 20)
	desc_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER

	var features_label = Label.new()
	features_label.name = "FeaturesLabel"
	features_label.text = "íŠ¹ì§•: ê³¨í‚¤í¼ ì• ë§ˆë¬´ë¦¬ â€¢ ë“œë¦¬ë¸” ëŒíŒŒ â€¢ ê°œì¸ í”Œë ˆì´ â€¢ ìŠ¤í”¼ë“œ"
	features_label.add_theme_font_size_override("font_size", 18)
	features_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	features_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART

	var future_label = Label.new()
	future_label.name = "FuturePositionsLabel"
	future_label.text = "ğŸ¯ ì„¸ë¶€ í¬ì§€ì…˜: ST(ìŠ¤íŠ¸ë¼ì´ì»¤), CF(ì¤‘ì•™ê³µê²©ìˆ˜), LW/RW(ìœ™ì–´)"
	future_label.add_theme_font_size_override("font_size", 18)
	future_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	future_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART

	info_container.add_child(title_label)
	info_container.add_child(desc_label)
	info_container.add_child(features_label)
	info_container.add_child(future_label)

	$ScrollContainer/VBoxContainer.add_child(info_container)


func _update_position_info_display() -> void:
	# Update position information display
	if not position_info.has(selected_position):
		return

	# Check if info container exists
	var info_container = $ScrollContainer/VBoxContainer.get_node_or_null("PositionInfoSection")
	if not info_container:
		print("[Step1_BasicInfo] Warning: PositionInfoSection not found")
		return

	var info = position_info[selected_position]

	# Update title
	var title_node = info_container.get_node_or_null("TitleLabel")
	if title_node:
		title_node.text = info.title

	# Update description
	var desc_node = info_container.get_node_or_null("DescriptionLabel")
	if desc_node:
		desc_node.text = info.description

	# Update features
	var features_text = "íŠ¹ì§•: " + " â€¢ ".join(info.features)
	var features_node = info_container.get_node_or_null("FeaturesLabel")
	if features_node:
		features_node.text = features_text

	# FuturePositionsLabelì€ ë” ì´ìƒ í•„ìš” ì—†ìŒ (êµ¬ì²´ í¬ì§€ì…˜ ì§ì ‘ ì„ íƒ)
	var future_node = info_container.get_node_or_null("FuturePositionsLabel")
	if future_node:
		future_node.visible = false


func _emit_data_update() -> void:
	var data = {"basic_info": {"name": name_input.text, "position": selected_position, "number": current_number}}
	emit_signal("data_updated", data)


## ì—ëŸ¬ ë¼ë²¨ ìƒì„±
func _create_error_label() -> void:
	_error_label = Label.new()
	_error_label.name = "ErrorLabel"
	_error_label.add_theme_color_override("font_color", Color.RED)
	_error_label.add_theme_font_size_override("font_size", 16)
	_error_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	_error_label.visible = false

	# NameSection ì•„ë˜ì— ì¶”ê°€
	var name_section = $ScrollContainer/VBoxContainer/NameSection
	if name_section:
		var parent = name_section.get_parent()
		var idx = name_section.get_index()
		parent.add_child(_error_label)
		parent.move_child(_error_label, idx + 1)


## ì´ë¦„ ê²€ì¦
func validate_name() -> Dictionary:
	var name_text = name_input.text.strip_edges()

	if name_text.is_empty():
		return {"valid": false, "error": "ì´ë¦„ì„ ì…ë ¥í•´ì£¼ì„¸ìš”"}

	if name_text.length() < MIN_NAME_LENGTH:
		return {"valid": false, "error": "ì´ë¦„ì€ ìµœì†Œ %dì ì´ìƒì´ì–´ì•¼ í•©ë‹ˆë‹¤" % MIN_NAME_LENGTH}

	if name_text.length() > MAX_NAME_LENGTH:
		return {"valid": false, "error": "ì´ë¦„ì€ ìµœëŒ€ %dìê¹Œì§€ ê°€ëŠ¥í•©ë‹ˆë‹¤" % MAX_NAME_LENGTH}

	# íŠ¹ìˆ˜ë¬¸ì ì²´í¬ (í•œê¸€, ì˜ë¬¸, ìˆ«ì, ê³µë°±ë§Œ í—ˆìš©)
	var regex = RegEx.new()
	regex.compile("^[ê°€-í£a-zA-Z0-9\\s]+$")
	if not regex.search(name_text):
		return {"valid": false, "error": "ì´ë¦„ì— íŠ¹ìˆ˜ë¬¸ìë¥¼ ì‚¬ìš©í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤"}

	return {"valid": true, "error": ""}


## ë²ˆí˜¸ ê²€ì¦
func validate_number() -> Dictionary:
	if current_number < MIN_NUMBER or current_number > MAX_NUMBER:
		return {"valid": false, "error": "ë²ˆí˜¸ëŠ” %d~%d ì‚¬ì´ì—¬ì•¼ í•©ë‹ˆë‹¤" % [MIN_NUMBER, MAX_NUMBER]}

	return {"valid": true, "error": ""}


## ì „ì²´ ê²€ì¦
func validate() -> Dictionary:
	var name_result = validate_name()
	if not name_result.valid:
		return name_result

	var number_result = validate_number()
	if not number_result.valid:
		return number_result

	return {"valid": true, "error": ""}


## ì—ëŸ¬ í‘œì‹œ
func show_error(message: String) -> void:
	if _error_label:
		_error_label.text = message
		_error_label.visible = true
		validation_failed.emit(message)

		# 3ì´ˆ í›„ ìë™ ìˆ¨ê¹€
		await get_tree().create_timer(3.0).timeout
		if _error_label:
			_error_label.visible = false


## ì—ëŸ¬ ìˆ¨ê¹€
func hide_error() -> void:
	if _error_label:
		_error_label.visible = false


## ê²€ì¦ í›„ ë°ì´í„° ë°˜í™˜ (ë‹¤ìŒ ë‹¨ê³„ ì§„í–‰ ì‹œ ì‚¬ìš©)
func get_validated_data() -> Dictionary:
	var result = validate()
	if not result.valid:
		show_error(result.error)
		return {}

	hide_error()
	return {
		"basic_info": {"name": name_input.text.strip_edges(), "position": selected_position, "number": current_number}
	}
